# RMV-Task03

./: CMakeLists.txt  README.md  main.cpp
src/: windmill.cpp
